--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,106 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  /* COLORS */
+  --Marine-blue: hsl(213, 96%, 18%);
+  --Purplish-blue: hsl(243, 100%, 62%);
+  --Pastel-blue: hsl(228, 100%, 84%);
+  --Light-blue: hsl(206, 94%, 87%);
+  --Strawberry-red: hsl(354, 84%, 57%);
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --Cool-gray: hsl(231, 11%, 63%);
+  --Light-gray: hsl(229, 24%, 87%);
+  --Magnolia: hsl(217, 100%, 97%);
+  --Alabaster: hsl(231, 100%, 99%);
+  --White: hsl(0, 0%, 100%);
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  --fw-bold: 700;
+  --fw-regular: 400;
+  --fw-normal: 400;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+* {
+  /* DETERMINE HOW THE WIDTH AND HEIGHT OF ELEMENTS IS CALCULATED  */
+  box-sizing: border-box; /* padding and border are taken from the determined width. */
 }
-a:hover {
-  color: #535bf2;
+
+body, html {
+  padding: 0;
+  margin: 0;
+  min-width: 100vh;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-size: 1rem;
+  font-weight: var(--fw-normal);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+a {
+  text-decoration: none;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+
+img,
+picture {
+  max-width: 100%;
+}
+
+input,
+button,
+select,
+textarea {
+  font: inherit;
+}
+
+/* SIDEBAR */
+
+.sidebar {
+  /* background-image: url('/src/assets/images/bg-sidebar-mobile.svg'); */
+  /* background-size: cover; */
+  /* background-repeat: no-repeat; */
+  /* background-position-x: center; */
+  background-color: blue;
+  height: 300px;
+  width: 100%;
+  overflow: hidden;
+   display: flex; 
+  justify-content: center;
+  align-items: center;
+  gap: 2rem
+}
+
+.step-indicator {
+  
+}
+
+.sidebar-info {
+  display: none;
+}
+
+.numbered-indicator {
+  border-radius: 50px;
+  border: 1px solid var(--White);
+  display: grid;
+  place-content: center;
+  width: 50px;
+  aspect-ratio: 1;
+  font-size: 1.125rem;
+  color: var(--Magnolia);
+  font-weight: var(--fw-bold);
+}
+
+/* FORMS */
+
+.step-page-title {
+  font-size: 1.125rem;
+  color: red;
 }
