--- a/src/index.css
+++ b/src/index.css
@@ -202,9 +202,9 @@ textarea {
   padding: 1rem;
 }
 
-.plan-selected {
+/* .plan-selected {
   border: 1px solid var(--Marine-blue);
-}
+} */
 
 
 .plan-details > * {
