--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,6 @@ body {
   font-size: 1rem;
   font-weight: var(--fw-normal);
   color: var(--Cool-gray);
-  overflow-y: hidden;
 }
 
 .block {
@@ -124,7 +123,7 @@ textarea {
   background-color: var(--White);
   width: 90%;
   margin-inline: auto;
-  margin-top: -80px;
+  margin-top: -100px;
   padding: 2rem;
   border-radius: 15px;
 }
@@ -200,7 +199,7 @@ textarea {
   margin-top: 30px;
   display: flex;
   flex-direction: column;
-  gap: 2.5rem;
+  gap: 1rem;
 }
 
 .plan-card {
@@ -209,13 +208,8 @@ textarea {
   align-items: start;
   border: 1px solid var(--Light-gray);
   border-radius: 8px;
-  padding: 1rem;
+  padding: .5rem;
 }
-
-/* .plan-selected {
-  border: 1px solid var(--Marine-blue);
-} */
-
 
 .plan-details > * {
   padding: 5px;
@@ -224,6 +218,10 @@ textarea {
 .plan-offer,
 .plan-type {
   color: var(--Marine-blue);
+}
+
+.plan-type {
+  font-size: 1.125rem;
 }
 
 .billing-switcher {
